[package]
name = "rmw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.57"
rmwlib = { path = "../rmw" }
logger = { path = "../logger" }
log = "0.4.17"
async-std = "1.11.0"

[[bin]]
bench = false
path = 'src/main.rs'
name = 'rmw'
