[package]
name = "logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
chrono = "0.4.19"
colored = "2.0.0"
fern = "0.6.1"

[dependencies.log]
version = "0.4.17"
features = ["release_max_level_off"]
