[package]
name = "rmwlib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["upnp"]
upnp = ["dep:upnp"]

[dependencies]
addrbytes = { path = "../addrbytes" }
config = { path = "../config" }
db = { path = "../db" }
err = { path = "../err" }
expire_map = { path = "../expire_map" }
keygen = { path = "../keygen" }
kv = { path = "../kv" }
os_cpu = { path = "../os_cpu" }
speedy = { path = "../lib/speedy" }
time = { path = "../time" }
upnp = { path = '../upnp', optional = true }
anyhow = "1.0.57"
async-std = "1.11.0"
const-str = "0.3.1"
dir = { path = "../dir" }
enum_dispatch = "0.3.8"
log = "0.4.17"
num_cpus = "1.13.1"
num_enum = "0.5.7"
lazy_static = "1.4.0"
twox-hash = "1.6.3"
ed25519-dalek-blake3 = "1.0.11"
x25519-dalek = "2.0.0-pre.1"
rayon = "1.5.3"
array-init = "2.0.0"
trust-dns-resolver = { version = "0.21.2", features = [
  "dns-over-https-rustls"
] }
z85 = "3.0.5"
paste = "1.0.7"
smallvec = { version = "1.8.0", features = [
  "const_generics",
  "may_dangle",
  "const_new"
] }
parking_lot = "0.12.1"
rand = "0.8.5"
num-traits = "0.2.15"
